# partsdb-tools

./: Jenkinsfile  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg
.github/workflows/: tests.yml
src/partsdb_tools/: app.py  common.py  files.py  picture.py  validate.py
src/partsdb_tools/components/: File.py  OrderNumber.py  Parameter.py  Part.py  Picture.py  Resistor.py  Series.py  Triac.py
src/partsdb_tools/config/: PartTypes.py
src/partsdb_tools/detail/: boundingBox.py  file_operations.py  outputImageParameters.py
src/partsdb_tools/packaging/: AxialTHTTape.py  Box.py  BoxPackaging.py  BulkBoxPackaging.py  PackagingBase.py  PaperTapeBoxPackaging.py  Reel.py  THTReel.py  Tape.py  TapeBoxPackaging.py  TapeReelPackaging.py  from_dict.py
src/partsdb_tools/units/: Value.py
tests/: test.py  test_packaging.py  test_value.py
