[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "partsdb-tools"
dynamic = ["version"]
description = "Tools for partsdb management. Part of partmanager project."
readme = "README"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "PyExifTool>=0.5.6",
    "opencv-python",
    "rawpy",
    "rich"
]

[project.scripts]
partsdb-tools = "partsdb_tools.app:main"
partsdb-format = "partsdb_tools.format:main"
partsdb-pictures = "partsdb_tools.picture:main"
partsdb-validate = "partsdb_tools.validate:main"
partsdb-file = "partsdb_tools.files:main"