[metadata]
long_description_content_type = text/markdown
long_description = file: README.md
author = sakoPO
url = https://github.com/partmanager/partsdb-tools
project_urls =
    Bug Tracker = https://github.com/partmanager/partsdb-tools/issues
    Changelog = https://github.com/partmanager/partsdb-tools/releases
    Source Code = https://github.com/partmanager/partsdb-tools
    Documentation = https://partmanager.github.io/partsdb-tools
license_file = LICENSE


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
